--- a/src/partials/notizie-news-home.html
+++ b/src/partials/notizie-news-home.html
@@ -11,14 +11,15 @@
 				<h2 class="post-home__title">Aenean non accumsan dui. Quisque fringilla mauris.</h2>
 			</a>
 			<div class="post-home__meta">
-				By: <a href="#">Monsieour Le Chifié</a> 
+				By: <a href="#" class="">Monsieour Le Chifié</a> 
 				Date: Jan 25 2017
 			</div>
 			<ul class="post-home__categories">
 				<li class="post-home__category"><a href="#">Business</a></li>
 				<li class="post-home__category"><a href="#">World</a></li>
 			</ul>
-			<p class="post-home__exerpt">Donec sit amet mi sit amet ex volutpat efficitur. Nullam efficitur libero id lorem venenatis, ac vehicula dolor efficitur. Phasellus sed egestas sapien. Proin placerat metus a ante consequat, nec... </p>
+			<p class="post-home__exerpt"><i class="fa fa-4x fa-pull-left" aria-hidden="true">D</i>onec sit amet mi sit amet ex volutpat efficitur. Nullam efficitur libero id lorem venenatis, ac vehicula dolor efficitur. Phasellus sed egestas sapien. Proin placerat metus a ante consequat, nec. Cras laoreet, augue in congue vulputate, tellus ipsum pulvinar nisi, sed luctus ex magna non sem. Aenean mattis sapien id nulla dignissim hendrerit. Nulla facilisi. Interdum et malesuada fames ac... </p>
+
 		</article>
 	</div>
 	<div class="news__home news__home_right">
@@ -36,9 +37,6 @@
 		</article>
 		<article class="post-home">
 			<h2 class="post-home__title">Etiam elit dui, pharetra hendrerit magna non.</h2>
-			<figure class="post-home__figure">
-				<img class="post-home__img" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
-			</figure>
 			<div class="post-home__meta">
 				By: <a href="#">Monsieour Le Chifié</a> 
 				Date: Jan 25 2017
@@ -46,7 +44,10 @@
 			<ul class="post-home__categories">
 				<li class="post-home__category"><a href="#">Business</a></li>
 				<li class="post-home__category"><a href="#">World</a></li>
-			</ul>			
+			</ul>
+			<figure class="post-home__figure">
+				<img class="post-home__img" src="{{root}}assets/img/notizie-post-taxi.jpg" alt="">
+			</figure>
 		</article>		
 	</div>
 	<aside class="news__sidebar">
